pipelinetriggers/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tekton-triggers
  namespace: tekton-pipelines
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tekton-triggers.daschner.dev"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-triggers
  namespace: tekton-pipelines
spec:
  hosts:
  - "tekton-triggers.kunalsuryansh.dev"
  gateways:
  - tekton-triggers
  http:
  - route:
    - destination:
        host: el-github-listener-interceptor
        port:
          number: 8080
---
